# ifpd2

./: .deepsource.toml  CHANGELOG.md  README.md  base.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
ifpd2/: __init__.py  asserts.py  chromosome.py  const.py  database.py  database2.py  dataclasses.py  fasta.py  io.py  logging.py  oligo.py  probe.py  probe_set.py  region.py  walker.py  walker2.py
ifpd2/autocomplete/: .ifpd2-complete.bash  .ifpd2-complete.fish  .ifpd2-complete.zsh
ifpd2/scripts/: __init__.py  arguments.py  autocomplete.py  db.py  db_check.py  db_dump.py  db_info.py  db_make.py  db_merge.py  db_reindex.py  dbchk.py  extract_kmers.py  ifpd2.py  query.py  query2.py
ifpd2/scripts/db/: check.py  dump.py  make.py  run.py  settings.py
ifpd2/tests/: test_scripts_db.py
test_data/test_db/: db.pickle
