[tool.poetry]
name = "ifpd2"
version = "1.0.0-alpha"
description = "An iFISH probe design pipeline (II)"
authors = ["Gabriele Girelli <gigi.ga90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ggirelli/iFISH-Probe-Design"
repository = "https://github.com/ggirelli/iFISH-Probe-Design"
keywords = ["biology", "cell", "DNA", "RNA", "FISH", "fluorescence", "hybridization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
	"License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
include = [
	"CHANGELOG.md",
	"LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.1"
pandas = "^1.2.2"
rich = "^9.10.0"
tqdm = "^4.58.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"ifpd2" = "ifpd2.scripts.ifpd2:main"
